changing some width/height values in varieties div to prevent overflow

--- a/public/assets/sass/_responsive.scss
+++ b/public/assets/sass/_responsive.scss
@@ -44,5 +44,9 @@
         flex-direction: row;
       }
     }
+
+    &__variety {
+      min-width: 30%;
+    }
   }
 }
